--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 /* estilos.css */
-/* Estilos generales y variables CSS */
+
 :root {
   --primary: #6a1b9a;  
   --accent: #00b894;   
@@ -11,7 +11,7 @@
 html, body {
   min-width: 100vw;
   overflow-x: hidden;
-  
+
 }
 
 
@@ -25,7 +25,7 @@ body {
 
 header {
   background: linear-gradient(135deg, #6a1b9a, #ab47bc);
-  color: #fff;
+
   padding: 1rem;
   text-align: center;
   position: fixed; /* hace que el header sea fijo */
@@ -41,7 +41,7 @@ header {
   flex-wrap: wrap;
   left: 0;
   right: 0;
-  padding: 1rem 2rem; 
+  padding: 1rem 1rem; 
   gap: 1rem;
   
 }
@@ -56,12 +56,23 @@ header {
 .titulo-contenedor {
   flex: 1;
   text-align: center;
+  overflow: hidden;
+  box-sizing: border-box;
+  max-width: 100vw;
+  padding: 0 1rem;
+  font-size: 1rem;
 }
 
 .titulo-contenedor h1 {
-  font-size: 1.8rem;
+  font-size: 2rem;
   margin: 0 0 0.5rem 0;
   text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.2;
+  font-weight: bold;
+  padding: 0 1rem;
 }
 
 /* Navegación */
@@ -387,78 +398,7 @@ html {
   transform: scale(1.1);
 }
 
-/* Contacto */
-form {
-  border: 1px solid var(--primary);
-  border-radius: var(--border-radius);
-  background: #fff;
-  padding: 1rem;
-  margin: 0 auto 2rem auto;
-  max-width: 500px;
-  width: 90%;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-  font-size: 1rem;
-  box-sizing: border-box;
-  padding-top: 0.5;
-}
 
-label {
-  display: block;
-  margin-bottom: 0.5rem;
-  font-weight: bold;
-  color: var(--primary);
-  font-size: 1rem;
-}
-
-input, textarea, button {
-  display: block;
-  width: 100%;
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  font-size: 1rem;
-  border-radius: var(--border-radius);
-  box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
-  transition: border 0.3s, box-shadow 0.3s;
-}
-
-input, textarea { border: 1px solid #ccc; }
-input:focus, textarea:focus {
-  border-color: var(--primary);
-  box-shadow: 0 0 8px rgba(106,27,154,0.2);
-  outline: none;
-}
-
-input:disabled, textarea:disabled, button:disabled {
-  background: #e0e0e0;
-  cursor: not-allowed;
-  color: #999;
-  border: 1px solid #ccc;
-  box-shadow: none;
-}
-
-button { 
-  background: linear-gradient(45deg, var(--primary), var(--accent)); 
-  color: #fff; 
-  border: none; 
-  cursor: pointer; 
-  transition: background 0.3s, transform 0.3s;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 0.05rem;
-  font-size: 1rem;
-  padding: 0.75rem;
-  border-radius: var(--border-radius);
-}
-
-button:hover:enabled { 
-  background: linear-gradient(45deg, var(--accent), var(--primary)); 
-  transform: scale(1.05);
-}
-
-.datos-contacto p { margin-bottom: 0.5rem;}
-.datos-contacto a { color: var(--primary); text-decoration: none; font-weight: bold;}
-.datos-contacto a:hover { text-decoration: underline; color: var(--accent);}
 
 /* Buscador */
 .buscador {
@@ -479,7 +419,7 @@ button:hover:enabled {
 
 #search {
   width: 90%;
-  max-width: 400px;
+  max-width: 1200px;
   padding: 0.75rem;
   border: 2px solid var(--accent);
   border-radius: var(--border-radius);
@@ -679,27 +619,18 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Contenedor ocultando overflow */
-.titulo-contenedor {
-  width: 100%;
-  overflow: hidden;
-  box-sizing: border-box;
-  max-width: 100vw;
-  padding: 0 1rem;
-  font-size: 2rem;
-}
 
-/* Animación lateral infinita */
+
+/* Animaciones para el título */
 @keyframes slide-infinite {
   0%   { transform: translateX(100%); }
   100% { transform: translateX(-100%); }
 }
 
 @keyframes color-change {
-  0%   { color: #ffffff; }
-  75%  { color: #fafa; }
-  25%  { color: #00b894; }
-  100% { color: #fff; }
+
+  50%  { color: #C13584 }
+  50% { color: #0c0b0b; }
 }
 
 /* Título animado */
@@ -799,3 +730,18 @@ footer {
   }
 }
 
+.contacto-main {
+  text-align: center;
+  margin: 1rem 0 1rem;
+  width: 100%;
+  box-sizing: border-box;
+  max-width: 100vw;
+  padding: 0 1rem;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  padding-top: 1rem;
+}
